--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="SitePoint">
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
-
+<b> hello </b>
 </head>
 
 <body>
